UPF-1378 Spacing issue fixed (#244)

--- a/src/pdp/components/PdpBeautyDesktop/DescriptionSection/NoReturnComponent.css
+++ b/src/pdp/components/PdpBeautyDesktop/DescriptionSection/NoReturnComponent.css
@@ -101,7 +101,7 @@
     font-weight: 500;
     font-size: 14px;
     line-height: 16px;
-    width: 300px;
+    width: 200px;
     margin-bottom: 16px;
     display: inline-block;
 }
